# context

./: CNAME  LICENSE  README.rst  index.html  summary-kennethreitz.tsv
_reports/: 2ppage.ll  4gen1.ll  8gen1.ll  BW_descendants.ll  CREDIT  af-import.ll  afg.ll  ahnenliste.ll  ahnentafel.ll  alive.ll  all_anc_lines.ll  allfam10c.ll  anc2_ged.ll  ancestors2.ll  anniver.ll  bib2html.c  bkdes16-1.ll  browser.ll  burial_index.ll  cid.ll  connect2.ll  cons.ll  count_desc.ll  count_dup.ll  count_paternal_desc.ll  cousins.ll  desc-henry.ll  desc_ged.ll  desc_html.ll  descged.ll  divorce.li  drep2.ll  dump-ances.ll  dump_html_sd.ll  eol.ll  est_life_span.ll  extract_gedcom.ll  extract_set.li  fam10c.ll  fam_ged.ll  (+77 more)
_reports/desc-tex2/: desc-tex.ll  desc-tex2.ll  drsetup.tex  drtree.tex  extree1.tex  extree2.tex  mysetup.tex
_reports/novel/: Makefile.am  novel.README
_reports/pedtex/: pedtex.ll  setup.tex
_reports/ps-fan/: ps-fan.ll  ps-fan.ps
_reports/st/: .gitignore  Makefile.am  st_all.ref  st_all_stdout.ref  st_collate.li  st_collate_UTF-8.li  st_convert.li  st_date.li  st_list.li  st_name.li  st_string_UTF-8.li  st_table.li  st_trig.li  test_fam_it.ll  test_fam_it.ref  test_forfam.ref  test_indi_it.ll  test_indi_it.ref  test_othr_it.ref  trigtest.ref
db/bible/: key  xrefs
db/bible/aa/: aa  ab
db/bible/ab/: aa  ab
db/bible/ac/: aa
db/georg/: key  xrefs
db/georg/aa/: aa  ab  ac
db/georg/ab/: aa  ab  ac
db/georg/ac/: aa  ab  ac
db/kennethreitz/: key  xrefs
db/kennethreitz/aa/: aa  ab  ac
db/kennethreitz/ab/: aa  ab
db/kennethreitz/ac/: aa  ab  ac
dna/: LICENSE
documents/: reitz-history-and-record-book.md  reitz-history.md
gedcom/biblical/: adameve.ged
gedcom/wikitree/: descendants-reidt-31.ged  tree-reitz-635.ged
html/: bible-tree.html  georg-tree.html  kennethreitz-tree.html
html/bible/: 0.html  1.html  10.html  100.html  1000.html  1001.html  1002.html  1003.html  1004.html  1005.html  1006.html  1007.html  1008.html  1009.html  101.html  1010.html  1011.html  1012.html  1013.html  1014.html  1015.html  1016.html  1017.html  1018.html  1019.html  102.html  1020.html  1021.html  1022.html  1023.html  1024.html  1025.html  1026.html  1027.html  1028.html  1029.html  103.html  1030.html  1031.html  1032.html  (+3778 more)
html/kennethreitz/: 0.html  1.html  10.html  100.html  1000.html  1001.html  1002.html  1003.html  1004.html  1005.html  1006.html  1007.html  1008.html  1009.html  101.html  1010.html  1011.html  1012.html  1013.html  1014.html  1015.html  1016.html  1017.html  1018.html  1019.html  102.html  1020.html  1021.html  1022.html  1023.html  1024.html  1025.html  1026.html  1027.html  1028.html  1029.html  103.html  1030.html  1031.html  1032.html  (+5518 more)
html/ui2libs/: bootstrap-dropdown.js  jquery.alerts.css  jquery.dataTables.columnFilter.js  jquery.fileupload-ui.css  main.css  promethease.tooltip.css  tooltips-texts.js
html/ui2libs/chosen_v1.1.0/: chosen.min.css
html/ui2libs/intro.js-2.1.0-fix1/: intro.js
html/ui2libs/jquery-ui-1.12.1.custom/: jquery-ui.min.css  jquery-ui.min.js
html/ui2libs/themes/css/: theme1.css
reports/: 6gen1.ll  Kenneth_Reitz_ancestry_composition_0.5.csv  Makefile.am  README  addsour.ll  afn_match.ll  alllines.ll  altern.ll  bday_cover.ll  bias.ll  book-latex.ll  bury.c  cgi_html.li  common.ll  cont.ll  count_anc.ll  coverage.ll  cron.ll  d-rtf.ll  dates.ll  db_summary.ll  desc-tree.ll  dump_html.ll  extract_html.ll  fam16rn1.ll  famgroup.ll  famrep.ll  famtree1.ll  fileindex.ll  find.ll  formatted_gedcom.ll  gedlist.ll  gedmin.ll  gedn.ll  genancc.ll  gendex.ll  genetics.ll  givens_gender.ll  grand.ll  hasnotes1.ll  (+38 more)
reports/desc-tex2/: Makefile.am  README  ex1.tex  poster.doc  poster.tex  poster1.tex  poster2.tex  setup.tex  tree.tex
reports/novel/: novel.intro  novel.ll
reports/pedtex/: Makefile.am  pedtex.readme
reports/ps-fan/: Makefile.am
reports/st/: st_all.ll  st_aux.li  st_collate_8859-1.li  st_db.li  st_number.li  st_string.li  test_forfam.ll  test_forindi.ll  test_forindi.ref  test_othr_it.ll  ti.ged  trigtest.ll
